--- a/Aier360/Base.lproj/Main.storyboard
+++ b/Aier360/Base.lproj/Main.storyboard
@@ -395,41 +395,81 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新密码(6-20位，不能有空格)" textAlignment="center" minimumFontSize="17" background="textField_bg" translatesAutoresizingMaskIntoConstraints="NO" id="IzJ-3g-PDw">
-                                <rect key="frame" x="0.0" y="8" width="600" height="45"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eph-gP-xqa">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="65"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_textfield_bg" translatesAutoresizingMaskIntoConstraints="NO" id="SGC-fq-PZO">
+                                        <rect key="frame" x="164" y="54" width="273" height="11"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="11" id="Lhb-2o-jM9"/>
+                                            <constraint firstAttribute="width" constant="273" id="qtl-hk-Wz9"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新密码(6-20位，不能有空格)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IzJ-3g-PDw">
+                                        <rect key="frame" x="168" y="20" width="265" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="TSK-cG-o4g"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pmg-jH-5Za" id="Dnr-gN-hJE"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="45" id="83f-Jb-gjc"/>
-                                    <constraint firstAttribute="height" constant="45" id="WCe-H3-yeA"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="l8J-6q-9AT"/>
+                                    <constraint firstItem="IzJ-3g-PDw" firstAttribute="width" secondItem="SGC-fq-PZO" secondAttribute="width" constant="-8" id="FVW-3F-lHV"/>
+                                    <constraint firstAttribute="bottom" secondItem="SGC-fq-PZO" secondAttribute="bottom" id="SL1-4S-KJj"/>
+                                    <constraint firstAttribute="centerX" secondItem="SGC-fq-PZO" secondAttribute="centerX" id="Xcy-2c-NKh"/>
+                                    <constraint firstAttribute="centerX" secondItem="IzJ-3g-PDw" secondAttribute="centerX" id="fAA-Nq-fI7"/>
+                                    <constraint firstAttribute="height" constant="65" id="reN-hf-xVw"/>
+                                    <constraint firstAttribute="bottom" secondItem="IzJ-3g-PDw" secondAttribute="bottom" id="yIN-kC-K1N"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="pmg-jH-5Za" id="Dnr-gN-hJE"/>
-                                </connections>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="确认新密码" textAlignment="center" minimumFontSize="17" background="textField_bg" translatesAutoresizingMaskIntoConstraints="NO" id="dNV-dK-mMW">
-                                <rect key="frame" x="0.0" y="61" width="600" height="45"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MTh-DD-TSb">
+                                <rect key="frame" x="0.0" y="73" width="600" height="65"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_textfield_bg" translatesAutoresizingMaskIntoConstraints="NO" id="rvt-LG-U0L">
+                                        <rect key="frame" x="164" y="54" width="273" height="11"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="11" id="04w-eO-DKK"/>
+                                            <constraint firstAttribute="width" constant="273" id="fM6-T6-osG"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="确认新密码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dNV-dK-mMW">
+                                        <rect key="frame" x="160" y="20" width="281" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="WL3-DH-pkk"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pmg-jH-5Za" id="DUq-AT-fn3"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="HHs-Kr-GiU"/>
-                                    <constraint firstAttribute="height" constant="45" id="Jbx-rx-3HM"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="45" id="nJz-XR-hYc"/>
+                                    <constraint firstItem="rvt-LG-U0L" firstAttribute="width" secondItem="dNV-dK-mMW" secondAttribute="width" constant="-8" id="51t-Vl-Os5"/>
+                                    <constraint firstAttribute="bottom" secondItem="dNV-dK-mMW" secondAttribute="bottom" id="G8k-Ym-vbB"/>
+                                    <constraint firstAttribute="height" constant="65" id="ddR-jr-gQa"/>
+                                    <constraint firstAttribute="centerX" secondItem="dNV-dK-mMW" secondAttribute="centerX" id="fye-hS-IpK"/>
+                                    <constraint firstAttribute="bottom" secondItem="rvt-LG-U0L" secondAttribute="bottom" id="n4y-fG-HLY"/>
+                                    <constraint firstAttribute="centerX" secondItem="rvt-LG-U0L" secondAttribute="centerX" id="tXt-He-xVz"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="pmg-jH-5Za" id="DUq-AT-fn3"/>
-                                </connections>
-                            </textField>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="IzJ-3g-PDw" firstAttribute="top" secondItem="53b-pH-JqR" secondAttribute="bottom" constant="8" id="Dug-bI-PSY"/>
-                            <constraint firstItem="dNV-dK-mMW" firstAttribute="top" secondItem="IzJ-3g-PDw" secondAttribute="bottom" constant="8" id="L7O-yT-NrH"/>
-                            <constraint firstItem="IzJ-3g-PDw" firstAttribute="leading" secondItem="G0z-ph-5hG" secondAttribute="leadingMargin" constant="-16" id="OrJ-hT-tef"/>
-                            <constraint firstItem="dNV-dK-mMW" firstAttribute="leading" secondItem="G0z-ph-5hG" secondAttribute="leadingMargin" constant="-16" id="Sod-Bc-9nz"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="IzJ-3g-PDw" secondAttribute="trailing" constant="-16" id="dhd-c2-gAn"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="dNV-dK-mMW" secondAttribute="trailing" constant="-16" id="ebA-89-vnA"/>
+                            <constraint firstItem="Eph-gP-xqa" firstAttribute="leading" secondItem="G0z-ph-5hG" secondAttribute="leading" id="2D8-qb-Ycr"/>
+                            <constraint firstItem="Eph-gP-xqa" firstAttribute="top" secondItem="53b-pH-JqR" secondAttribute="bottom" id="3qe-i7-nBX"/>
+                            <constraint firstAttribute="trailing" secondItem="MTh-DD-TSb" secondAttribute="trailing" id="9cL-bU-17N"/>
+                            <constraint firstItem="MTh-DD-TSb" firstAttribute="top" secondItem="Eph-gP-xqa" secondAttribute="bottom" constant="8" id="TaA-xf-HEK"/>
+                            <constraint firstAttribute="trailing" secondItem="Eph-gP-xqa" secondAttribute="trailing" id="ct0-58-IYg"/>
+                            <constraint firstItem="MTh-DD-TSb" firstAttribute="leading" secondItem="G0z-ph-5hG" secondAttribute="leading" id="me4-Hm-4PL"/>
                         </constraints>
                     </view>
                     <connections>
@@ -450,9 +490,9 @@
         <image name="login_code_n" width="85" height="44"/>
         <image name="login_code_s" width="85" height="44"/>
         <image name="login_pwd_icon" width="15" height="22"/>
+        <image name="login_textfield_bg" width="273" height="11"/>
         <image name="login_textfield_long" width="355" height="44"/>
         <image name="login_textfield_short" width="250" height="44"/>
-        <image name="textField_bg" width="320" height="45"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="m2C-bP-9vY"/>
