--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -1599,7 +1599,7 @@
                                                 <constraint firstAttribute="width" constant="106" id="N1p-tE-V9e"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <state key="normal" title="+关注" backgroundImage="bt_user_chat">
+                                            <state key="normal" title="加好友" backgroundImage="bt_user_chat">
                                                 <color key="titleColor" red="0.13725490200000001" green="0.76862745099999996" blue="0.54117647059999996" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <connections>
